# wave2

./: .gitignore  Cargo.toml  LICENSE
custom_widgets/: Cargo.toml
custom_widgets/src/: cell_list.rs  lib.rs  renderers.rs  styles.rs  traits.rs  utils.rs
custom_widgets/src/core/: cell2.rs  mod.rs  signal_window.rs
custom_widgets/src/renderers/: cell.rs  cell2.rs  cell_list.rs  hscroll.rs  menu_bar.rs  mod.rs  signal_window.rs
custom_widgets/src/styles/: cell.rs  cell2.rs  cell_list.rs  mod.rs  signal_window.rs
custom_widgets/src/widget/: cell.rs  cell2.rs  cell_list.rs  hscroll.rs  menu.rs  menu_bar.rs  mod.rs  nested_menu.rs  signal_window.rs
custom_widgets/src/widget/overlay/: cell_overlay.rs  mod.rs
custom_widgets/widget_derives/: Cargo.toml
custom_widgets/widget_derives/src/: lib.rs
custom_widgets/widget_derives/tests/: integration_tests.rs
notes/: next_and_prev.md
src/: config.rs  main.rs
src/backend/: errors.rs  mod.rs  vcd_parser.rs  wavedb.rs
src/components/: display_wave.rs  hier_nav.rs  icon_bar.rs  menu_bar.rs  mod.rs  module_nav.rs  sigwindow.rs  style.rs  wavewindow.rs
src/components/hier_nav/: hier_nav.rs  hier_node.rs  mod.rs
src/components/shared/: cell_list.rs  tree_node.rs
src/components/signals/: beach.rs  display_wave.rs  mod.rs  sigwindow.rs  wavewindow.rs
src/components/sigwindow/: display_wave.rs  mod.rs  sigwindow.rs  wavewindow.rs
src/frontend/: mod.rs  sigwindow.rs  wavewindow.rs
wavedb/: Cargo.toml
wavedb/src/: api.rs  bucket.rs  errors.rs  formatting.rs  gen_parser.rs  hier_map.rs  lib.rs  signals.rs  vcd_parser.rs  wavedb.rs
wavedb/src/inout/: mod.rs  nfd_wrapper.rs  wave_loader.rs
wavedb/src/puddle/: builder.rs  mod.rs  testing_utils.rs  utils.rs
wavedb/src/storage/: bucket.rs  display_wave.rs  in_memory.rs  mod.rs
wavedb/test_vcds/: vga.vcd  wikipedia.vcd
widget_test/cell/: Cargo.toml
widget_test/cell/src/: main.rs
widget_test/cell2/: Cargo.toml
widget_test/cell2/src/: main.rs
widget_test/cell_list/: Cargo.toml
widget_test/cell_list/src/: main.rs
widget_test/hscroll/: Cargo.toml
widget_test/hscroll/src/: main.rs
widget_test/menu_bar/: Cargo.toml
widget_test/menu_bar/src/: main.rs
widget_test/wavewindow/: Cargo.toml
widget_test/wavewindow/src/: main.rs
