[package]
name = "wave2"
version = "0.1.0"
authors = ["James Connolly <jimmy@1024bees.com>"]
edition = "2018"


[dependencies]
tokio = "0.2.18"
iced = { git = "https://github.com/hecrj/iced", rev="ff15ebc54778dee2a7262469c8a2bcd5abecd4d1", features = ["glow", "glow_canvas","tokio"] }
iced_glutin = {version = "*"}
iced_native = {git = "https://github.com/hecrj/iced", rev="ff15ebc54778dee2a7262469c8a2bcd5abecd4d1"}
iced_wgpu = {git = "https://github.com/hecrj/iced", rev="ff15ebc54778dee2a7262469c8a2bcd5abecd4d1"}
iced_graphics = {git = "https://github.com/hecrj/iced", rev="ff15ebc54778dee2a7262469c8a2bcd5abecd4d1"}
env = "*"
bincode = "*"
vcd = {git = "https://github.com/1024bees/rust-vcd", rev="48186f52f5cc5d6b012240e6c97f2cc7b9ddfb9f"}
sled = "*"
serde = "*"
cached = "*"
bit-vec = { version = "0.6", features = ["serde"] }


[dev-dependencies]
tempfile = "3"

[workspace]
members = [ "widget_test/wavewindow",
            "widget_test/cell_list",
            "custom_widgets",
]

