[package]
name = "wave2"
version = "0.1.0"
authors = ["James Connolly <jimmy@1024bees.com>"]
edition = "2018"


[dependencies]
tokio = "0.2.18"
iced = { git = "https://github.com/hecrj/iced", rev="4f2962d73f3bdeeca8a11817e404c45e91e2c2cc", features = ["glow", "glow_canvas","tokio"] }
iced_glutin = {version = "*"}
iced_native = {git = "https://github.com/hecrj/iced", rev="4f2962d73f3bdeeca8a11817e404c45e91e2c2cc"}
iced_wgpu = {git = "https://github.com/hecrj/iced", rev="4f2962d73f3bdeeca8a11817e404c45e91e2c2cc"}
iced_graphics = {git = "https://github.com/hecrj/iced", rev="4f2962d73f3bdeeca8a11817e404c45e91e2c2cc"}
env = "*"
nfd = "*"
log = "0.4.0"
env_logger = "0.7.1"
bincode = "*"
vcd = {git = "https://github.com/1024bees/rust-vcd", rev="48186f52f5cc5d6b012240e6c97f2cc7b9ddfb9f"}
sled = "*"
serde = "*"
cached = "*"
toml = "*"
strum = "0.19"
strum_macros = "0.19"
clap = "3.0.0-beta.1"
bit-vec = { version = "0.6", features = ["serde"] }

wave2_custom_widgets = { version= "0.1", path = "custom_widgets"}
wave2_wavedb = { version= "0.1", path = "wavedb"}



[dev-dependencies]
tempfile = "3"

[workspace]
members = [ "widget_test/wavewindow",
            "widget_test/cell_list",
            "widget_test/cell",
            "custom_widgets",
            "wavedb",
]

