[package]
name = "wave2_custom_widgets"
version = "0.1.0"
authors = ["James Connolly <jimmy@1024bees.com>"]
description = "custom widgets to be used inside wave2"
edition = "2018"


[dependencies]
iced = "0.2.0"
iced_native = "0.3.0"
iced_graphics = "*"
iced_style = "*"
iced_core = "*"
log = "0.4.0"
pretty_env_logger = "0.4"

