[package]
name = "wave2_custom_widgets"
version = "0.1.0"
authors = ["James Connolly <jimmy@1024bees.com>"]
description = "Custom widgets to be used inside wave2; these aren't in any way coupled to the application though"
edition = "2018"


[dependencies]
iced = { version="0.3.0", features = ["tokio"] }
iced_native = "*"
iced_graphics = "*"
iced_style = "*"
iced_core = "*"
log = "0.4.0"
lyon = "0.15.0"
pretty_env_logger = "0.4"
strum_macros = "0.19"
wave2_widget_derives = {path = "widget_derives"}
wave2_wavedb = {path = "../wavedb"}
iced_aw = {git = "https://github.com/1024bees/iced_aw", branch="rb3", features=["menu"] }

