[package]
name = "wave2_wavedb"
version = "0.1.0"
authors = ["James Connolly <jimmy@1024bees.com>"]
edition = "2018"


[dependencies]
tokio = "0.2.18"
env = "*"
bincode = "1.3.1"
vcd = {git = "https://github.com/1024bees/rust-vcd", rev="48186f52f5cc5d6b012240e6c97f2cc7b9ddfb9f"}
sled = "*"
serde_json = "*"
serde = { version= "1.0.118", features = ["derive"] }
cached = "*"
toml = "*"
nfd = "*"
thiserror = "1.0"
log = "0.4.0"
env_logger = "0.7.1"



clap = "3.0.0-beta.1"
bitvec = {version = "0.19.4", features = ["alloc", "serde"] }

[dev-dependencies]
tempfile = "3"


