[package]
name = "wave2_widget_derives"
version = "0.1.0"
authors = ["James Connolly <jimmy@1024bees.com>"]
description = "Custom derives widgets to be used inside wave2; these aren't in any way coupled to the application though"
edition = "2018"
publish = false

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"
strum_macros = "0.19"


[dev-dependencies]
wave2_custom_widgets = {path = "../../custom_widgets"}
