[package]
name = "cell_list"
version = "0.1.0"
authors = ["James Connolly <jimmy@1024bees.com>"]
edition = "2018"
publish = false

[dependencies]
wave2 = { path = "../.."}
wave2_custom_widgets = { path = "../../custom_widgets"}
tokio = "0.2.18"
iced = { git = "https://github.com/hecrj/iced", rev="ff15ebc54778dee2a7262469c8a2bcd5abecd4d1", features = ["glow", "glow_canvas","tokio"] }
iced_glutin = {version = "*"}
iced_native = {git = "https://github.com/hecrj/iced", rev="ff15ebc54778dee2a7262469c8a2bcd5abecd4d1"}
iced_wgpu = {git = "https://github.com/hecrj/iced", rev="ff15ebc54778dee2a7262469c8a2bcd5abecd4d1"}
iced_graphics = {git = "https://github.com/hecrj/iced", rev="ff15ebc54778dee2a7262469c8a2bcd5abecd4d1"}


