[package]
name = "cell_list"
version = "0.1.0"
authors = ["James Connolly <jimmy@1024bees.com>"]
edition = "2018"
publish = false

[dependencies]
wave2 = { path = "../.."}
wave2_custom_widgets = { path = "../../custom_widgets"}
tokio = "0.2.18"
iced = { git = "https://github.com/hecrj/iced", rev="4f2962d73f3bdeeca8a11817e404c45e91e2c2cc", features = ["glow", "glow_canvas","tokio"] }
iced_glutin = {version = "*"}
iced_native = {git = "https://github.com/hecrj/iced", rev="4f2962d73f3bdeeca8a11817e404c45e91e2c2cc"}
iced_wgpu = {git = "https://github.com/hecrj/iced", rev="4f2962d73f3bdeeca8a11817e404c45e91e2c2cc"}
iced_graphics = {git = "https://github.com/hecrj/iced", rev="4f2962d73f3bdeeca8a11817e404c45e91e2c2cc"}
env_logger = "*"
log = "*"
